# web-gui

./: .gitignore  Cargo.toml  build.sh  dev.sh  extension.schema.json
backend/: Cargo.toml  rustfmt.toml
backend/resources/: index.html
backend/src/: app.rs  app_paths.rs  invoke.rs  main.rs  window.rs
backend/src/app/: invoke.rs  mod.rs  resources.rs  window.rs
backend/src/plugins/: app.rs  dialog.rs  fs.rs  mod.rs  window.rs
backend/src/scripts/: init.js  modules.js
backend/src/state/: mod.rs
backend/src/state/extensions/: extension.rs  extension_host.rs  extension_scanner.rs  manifest.rs  mod.rs
extensions/hello/: manifest.json
extensions/hello/js/: extension.js
frontend/: eslint.config.js  package.json  pnpm-lock.yaml
resources/: fs.mjs  index.html  style.css
resources/esm/: dialog.mjs  extensions.mjs  fs.mjs  ipc.mjs  window.mjs
resources/www/: index.html  splash.html
src/: app.rs  invoke.rs  main.rs  resources.rs  window.rs
src/plugins/: fs.rs
src/scripts/: init.js  modules.js
