[package]
name = "web-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
mime_guess = "2.0.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tao = "0.28.1"
tokio = { version = "1.39.2", features = ["full"] }
wry = { version = "0.41.0", features = ["linux-body"] }
