[package]
name = "web-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
mime_guess = "2.0.5"
rand = "0.8.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tao = "0.29.0"
tokio = { version = "1.39.2", features = ["full"] }
wry = { version = "0.42.0", features = ["linux-body"] }
rfd = { version = "0.14", default-features = false, features = [
  "tokio",
  "gtk3",
  "common-controls-v6",
] }
raw-window-handle = "0.6"
